# rulinalg

./: Cargo.toml
src/: convert.rs  error.rs  lib.rs  ulp.rs  utils.rs
src/macros/: assert_matrix_eq.rs  assert_scalar_eq.rs  assert_vector_eq.rs  comparison.rs  matrix.rs  vector.rs
src/matrix/: deref.rs  impl_mat.rs  impl_ops.rs  impl_permutation_mul.rs  iter.rs  mat_mul.rs  mod.rs  permutation_matrix.rs  slice.rs
src/matrix/base/: impl_base.rs  mod.rs
src/matrix/decomposition/: bidiagonal.rs  cholesky.rs  eigen.rs  hessenberg.rs  householder.rs  lu.rs  mod.rs  qr.rs  svd.rs
src/norm/: mod.rs
src/testsupport/: constraints.rs
src/vector/: impl_ops.rs  impl_vec.rs  mod.rs
