[package]
name = "rulinalg"
version = "0.4.2"
authors = ["AtheMathmo"]

categories = ["science"]
description = "A linear algebra library."
repository = "https://github.com/AtheMathmo/rulinalg"
documentation = "https://AtheMathmo.github.io/rulinalg/"
keywords = ["linalg","linear","algebra","linear-algebra","matrix"]
readme = "README.md"
license = "MIT"

[dependencies]
libm = "0.1.2"

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.num-traits]
version = "0.2.6"
default-features = false

[dependencies.matrixmultiply]
path = "../../libs/matrixmultiply"


